Collect-TV-20180201/src/objects/TNET_FAQ__c.object
<CustomObject>
    <fields>
        <fullName>TNET_FAQ_Number__c</fullName>
        <label>FAQ Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TNET_FAQ_Solution__c</fullName>
        <label>FAQ Solution</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TNET_FAQ_Title__c</fullName>
        <label>FAQ Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNET_FAQ_Type__c</fullName>
        <label>FAQ Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>TNET FAQ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TNET_FAQ_Type__c</columns>
        <columns>TNET_FAQ_Title__c</columns>
        <columns>TNET_FAQ_Solution__c</columns>
        <columns>TNET_FAQ_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TFAQ-{0000}</displayFormat>
        <label>TNET FAQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>